--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,6 +62,15 @@ body {
   cursor: pointer;
   transition: opacity 0.2s;
 }
+.button2{
+  padding: 8px 16px;
+  background-color: rgb(92, 77, 187);
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: opacity 0.2s;
+}
 
 .button:hover {
   opacity: 0.8;
@@ -83,6 +92,6 @@ body {
 
 .message.error {
   background-color: #ffe6e6;
-  color: #ff4444;
+  color: #ee5252;
   border: 1px solid #ff4444;
 }
